--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <tr>
         <td>Stage 1</td>
         <td>
-      <form action="Activity 1/ungoalstep1.html">
+      <form action="Activity Work 1/untitled.html">
           <input class = "center" type="submit" value="Stage 1 Site" />
       </form>
 
