final push website

--- a/template.html
+++ b/template.html
@@ -11,7 +11,6 @@
 	  <div class="overlay-content">
 	    <a href="template.html">Goal 8</a>
 	    <a href="template2.html">Goal 12</a>
-	    <a href="template3.html">Connections Between Goals</a>
 	  </div>
 	</div>
 
@@ -41,7 +40,7 @@ div.a {
 
 <div id='Sec1'> 
 	<div class="content">
-		<p4> As populations grow and industries expand, it is important to maintain sustainable, fair practices in order to accomodate for the workers and their families in these growing industries.As the global economy continues it's recovery from the recession of 2008-2009, we are seeing overall slower growth, exposed and increasing inequalities and a lack of jobs to accomodate the population surplus. In order to meet these expectations, the sustainability goal hopes to promote constant economic growth, higher levels of productivity as well as technological advancement. To achieve this, the UN goal aims to :
+		<p4> As populations grow and industries expand, it is important to maintain sustainable, fair practices in order to accomodate for the workers and their families in these growing industries.As the global economy continues it's recovery from the recession of 2008-2009, we are seeing overall slower growth, exposed and increasing inequalities and a lack of jobs to accomodate the population surplus. In order to meet these expectations, the sustainability goal hopes to promote constant economic growth, higher levels of productivity as well as technological advancement. The UN has also made it its' mission to diversify, innovate and advance varrying industries in order to achieve job growth and increase GDP. In order to achieve this, the UN goal aims to :
 
 		<center>
 		</br>
@@ -62,42 +61,42 @@ div.a {
 </div>
 
 <div id='FAQh' class="header4">
-	  <h1>Further Information</h1>
+	  <h1>Statistics and Introductory Information</h1>
 </div>
 
 <div class="content2">
-	<p> Over the course of the last 25 years, the amount of workers living in extreme poverty has declined dramatically. 
+	<p> Over the course of the last 25 years, the amount of workers living in extreme poverty has been dramatically decreased, causing the middle class of many countries to increase and even help decrease the income inequality present in many already developed countries.In fact, the middle class makes up to 34% of total employment, triple the growth seen from 1991-2015. However, populations are growing at such a rate that employment opportunities are unable to keep up; causing mass unemployment throughout the globe. The International Labour Organization states that there are over 178 million people were unemployed worldwide in 2018 - a rate of 5%. Even though we have exponentially decreased the amount of workers living in extreme proverty, there are still over 700 million workers worldwide living on under $3.20 a day. Slow industry expansion, poor work conditions and unfair wages trap many unfortunate enough all around the world; the overworked and underpaid employee is sadly a common theme throughout both developed and developing countries alike.
 	</p>
 </div>
 
 
-<hr>
+<div id='commonq' class="header4">
+	  <h1> Continued Facts and Arguments</h1>
+</div>
 
 <div id='Sec3' class="content2">
-	<p>Community urban gardens, green districts and sustainable communities that are now spreading like wildfire all over the world. Further examples of what is being done include; producingorganic products, using solar plants for hot water production and electricity, permaculture, green building, phytodepuration for water recycling is applied and where electric vehicles were introduced. Fortunately, for a few decades, civil society and public institutions have also started working on disaster risk management. Bio-engineering works to cope with  hydro-geological instability as an example, having the dual function of mitigating the landslides risk and oxygenating heavily polluted areas. As well as the resettlement of communities located in highly vulnerable areas through the construction of new facilities, designed for the adaptation to climate change and able to withstand tornadoes, earthquakes and floods, while totally respecting the residants' traditions.
+	<p> The global divide of gender equality in the workplace is further apparent when looking at the labour force worldwide; over 85 million women are underutiziled compared to 55 million men. With these facts and statistics, it is painfully obvious we must repurpose and retool our social and economical policies aimed towards eradicating poverty; as it is clear that in too many places across the globe, having a stable job and income is not a certain ticket out of dire financial and living situations. Human trafficking, forced labour, exploitation of child workers, dangerous working conditions, job loss and industry monopilization, etc. - these are just some of the problems facing the completion of the goal. It is clear that the time to act is now, as populations have never grown at the same pace as they are in the past decade and the next following ones. 
 	</p>
 
 </div>
 
 
 
-<div id='FAQh' class="header4">
-	  <h1>Common Questions</h1>
-</div>
 
 
 
 <div class="wrapper2">
 
 	<div class = "section1">
-		<button class="accordion">What is a sustainable city?</button>
+		<button class="accordion">What's the indicator used to show the economic growth of a country/industry? </button>
 			<div class="panel">
-			  <p>The general consensus is that it is a city that minimizes the inputs and outputs. This means, they use fewer resources and create less waste. When it comes to sustainablity in the context of sustainable cities, there is an underlying consideration of the environmental impact. These factors include, but are not limited to, water, air pollution, energy, and waste. With over half the world's population living in cities, there is a desire to make cities work better and healthier.</p>
+			  <p>To show a country's economic growth, a measurement system known as GDP, (gross domestic product), was created by economists. Essentially, it displays the overall monetary value acquired from a country's manufacturing or services provided within a certain time period. In order to be an effective system to show growth, GDP is compared from the previous year's GDP. For example, if a country's yearly GDP has grown 5%, that means that the monetary value of all of it's industries and services has increased by 5% since last year. 
+			   </p>
 			</div>
 
-		<button class="accordion">What are some things I can do in my life to help?</button>
+		<button class="accordion">Why should someone in a developed, Western country, concern themselves with the economical/financial struggles of countries and industries in impoverished areas across the globe?</button>
 			<div class="panel">
-			  <p>The average person doesn't have to do a lot in this area to make a significant difference, but if everyone does a few things on a daily basis, it will have a massive impact on making your city a better more sustainable place. A few things you can do include taking the public transit, biking, or walking instead of taking a car. You can also eat locally and start a garden. These small things will have an impact on the quality of your city and work towards a greener, healthier future.</p>
+			  <p> Technological advances across the world have connected people, businesses and nations alike. Free trade agreements,(allowing trade between countries with a reduction in tariffs and fees), have allowed developing countries to enter agreements with developed countries and gain a larger market outreach, enabling their industries to grow and prosper with suitable competition. Huge companies in the West often utilise cheap,unfair labour practices in countries such as China, Indonesia and Bangladesh; in which workers are often forced to work in terrible conditions for little to no pay. Thus, allowing companies to charge cheap prices from Western consumers to gain a large profit. Fueling this corporate machine by purchasing these cheap products and not concerning oneself with fair trade certification causes this vicious cycle of exploitation, allowing these companies to get richer while exploiting unknown workers halfway across the planet. It is a basic human right for every person to be treated equally, and yet many companies blatantly disregard this in order to turn a profit. </p>
 			</div>
 
 		
@@ -106,16 +105,18 @@ div.a {
 
 	<div class = "section2">
 
-	<button class="accordion">What are some examples of sustainable cities?</button>
+	<button class="accordion">What can I do to help?</button>
 		<div class="panel">
-		  <p>A short list of some examples of sustainable cities incldude; Copenhagen, Denmark; San Francisco, California; Vanouver, Canada; and Masdar City, United Arab Emirates. Feel free to take a google search on any of these cities to learn some more.</p>
+		  <p>To actively contribute to the completion of this UN goal, youcan use the following links:</p> <a href="https://www.undp.org/content/undp/en/home/sustainable-development-goals/goal-8-decent-work-and-economic-growth.html"> The United Nations Development Programme</a> 
+		 <br>
+		  <a href="https://www.sdgfund.org/goal-8-decent-work-and-economic-growth">
+		  Sustainable Development Goals Fund </a> 
+		  <p> These are excellent resources to find opportunities funded by the United Nations across the glove to help contribute to the completion of this goal.</p>
 		</div>
 
-	<button class="accordion">Where can I learn more</button>
+	<button class="accordion">Where can I do some further research on this topic?</button>
 		<div class="panel">
-		  <p>If you would like to learn some more you can use this link;</p> <a href="https://www.climaterealityproject.org/blog/five-sustainable-cities-making-difference-planet">Sustainable Cities Making a Difference For The Planet</a>
-
-		   <p> Another good way to learn more is google some questions on sustainable cities and what they are doing to remain sustainable.</p>
+		  <p>If you are deeply interested in SDG 8, you can use the following link to find some additional information about the goal, including it's ambitions and strides, visit the following link: </p> <a href="https://sdg-tracker.org/economic-growth"> Sustainability Development Goal Tracker</a>
 		</div>
 
 
@@ -123,9 +124,7 @@ div.a {
 
 </div>
 
-<div class="donatediv">
-	<button class="donatebtn" onclick="window.location.href = 'https://www.canadahelps.org/en/explore/charities/category/environment/';">Donate</button>
-</div>
+
 
 
 <script src="script.js"></script>
